# ChangeLog for app-admin/perl-cleaner
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/perl-cleaner/ChangeLog,v 1.99 2014/07/06 02:22:40 jer Exp $

  06 Jul 2014; Jeroen Roovers <jer@gentoo.org> perl-cleaner-2.15.ebuild:
  Stable for HPPA (bug #516462).

  05 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> perl-cleaner-2.15.ebuild:
  alpha/amd64/arm/ia64/ppc/ppc64/s390/x86 stable wrt bug #516462

*perl-cleaner-2.15 (05 Jul 2014)

  05 Jul 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +perl-cleaner-2.15.ebuild:
  Version bump for bug 516032

  29 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> -perl-cleaner-2.7.ebuild:
  Drop old.

  29 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> perl-cleaner-2.14.ebuild:
  Mark s390 stable

  29 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> perl-cleaner-2.14.ebuild:
  x86 stable wrt bug #512616

  29 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> perl-cleaner-2.14.ebuild:
  sparc stable wrt bug #512616

  29 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> perl-cleaner-2.14.ebuild:
  ppc stable wrt bug #512616

  29 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> perl-cleaner-2.14.ebuild:
  ppc64 stable wrt bug #512616

  29 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> perl-cleaner-2.14.ebuild:
  ia64 stable wrt bug #512616

  29 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> perl-cleaner-2.14.ebuild:
  alpha stable wrt bug #512616

  29 Jun 2014; Jeroen Roovers <jer@gentoo.org> perl-cleaner-2.14.ebuild:
  Stable for HPPA (bug #512616).

  28 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> perl-cleaner-2.14.ebuild:
  arm stable wrt bug #512616

  28 Jun 2014; Mikle Kolyada <zlogene@gentoo.org> perl-cleaner-2.14.ebuild:
  amd64 stable wrt bug #512616

  28 Jun 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  -perl-cleaner-2.12.ebuild, -perl-cleaner-2.13.ebuild:
  Remove old

*perl-cleaner-2.14 (09 Jun 2014)

  09 Jun 2014; Andreas K. Huettel <dilfridge@gentoo.org>