@@ -4,14 +4,16 @@ Hash: SHA256
 DIST perl-cleaner-2.14.tar.bz2 6067 SHA256 d941fb6c4dc168b5192cba31e0c68a5e1642fe67c04d7b3ad09d03742e9bd3fc SHA512 a4d0ee749712e4f0c4a6acfd08be9091d440fdc2aba34f5c82952123a133201f812ef9e893b6e06652a21601a0ef84e6b4ee92251e0a0520c4f03963b0f72f9a WHIRLPOOL 4c2620fa7ca73ccb95061ed81951f1d7563cffd0966d01d95d7786e81f7dec081364f980d127f619e335c8a74cebaef8d5ff20e5cbf6c7e3e0256c8655031a72
 DIST perl-cleaner-2.15.tar.bz2 6165 SHA256 20371908fd19b08e90ec282dc9ceba90e01655336444ebb22c7a432bcb81adb1 SHA512 58bda82808b8213019a0807cedba30b10fceda04a256f268a654bba8328ab11eb3c7b8a33046d7a24147f2b35d8a53ce86ad30efb0c77d5598f185c3a5d6a797 WHIRLPOOL 9a37d200c144eea0121beea816778b9bd3244cac1c88ada8a6854cc661d9f0071c113a5099df1a0ba6ed1bfeb00a2201308762422d85ac2f0d3a6eb9f0a467f9
 EBUILD perl-cleaner-2.14.ebuild 722 SHA256 2a6667206441800f2a0a2dbdfcbf6a2c192f0cb3d1b7c4d241ff2a7ee3f3d9aa SHA512 3ecdeedd240e18d3a611f0711ce18ad14ec514c595fecb8bdd087df3f122de554e435107fadc3e02a6e805f837fdaac7895ad91c5281334c297598a7dae4e9c5 WHIRLPOOL 6c8990793ab1afb788ef407235c82d2138ac702f5630e4ce8f73690722e9624a204d009c99ce4b988d6e4b9dccc36a277286441950da56fa40bd981ff6a0e252
-EBUILD perl-cleaner-2.15.ebuild 914 SHA256 9f44e4dcc693491bcbe42c7e0d92990affdc961c5dfaaa6978cd0c837b4e39da SHA512 9f1ed5bc97f898c35cb19b3f55b148c1461e9d2bfbd78c8de17ed0cf4dbc0ba789971dfc9d223a135cb169425f61459d221cbf41f6035f37dc18fbd36648f5b3 WHIRLPOOL 9cd698295671a7fbb165548c4e4d3e4f22accf998a3085d84c99d5d983675ea5de766fe72d6196981bbbcc18097604eb52f4714038f97670630f9a3f7c9f712f
+EBUILD perl-cleaner-2.15.ebuild 914 SHA256 d8db50cef2f2e61a9e49f93c522fc211d069d1602e92f8488bf490454e03a590 SHA512 0b45164e1aea61c770c7561d8106e43bae5f01d79602e9d468da3c32bff1114a96bdd57a7036b711b20d6a4be3312ff0a0a31a4da9795d44750a84ca5be017e3 WHIRLPOOL 50c10d6a2cd7efad728ba2ac52f84fbe1d1e1901a7581a49177e2dfece19d2c1002c3cfa7ffbf2d52015dc5c2b191c902b534314394e962be0560ba410cb5427
 EBUILD perl-cleaner-9999.ebuild 926 SHA256 dfe87e041d5f9b1546c2d45a9b08e371d9bf07b243f57dff57409bd08b470890 SHA512 b205b342899d592ce9a80db0ade1c4102db76e639bac1e3f2958c78eb985dbea4898960cd6a0fed9a4e53cd1cb6ca8c351f23f7a9fab8089702e52d3b8857503 WHIRLPOOL 6843f409e1063728ed58844cad5673e1354d7f9dbc09a510da11afc7ad3ec38d663239e7d5f2d257839c47ea6dc50e490b7e8742198224dc31253dc28f891373
-MISC ChangeLog 13770 SHA256 f74ee0c8cd11a822867c90ababc775bedd84a8f8aa900ccf97a5ce936fa59746 SHA512 9314c03a21bf04b786b592f5edf46a0d8a3bf8ba2e189d602609dfd69b754f92822ceb57ad5da55d081969d058e0b7ed834fac411000a21147b0034e9f1e1553 WHIRLPOOL 836ff72e7e0445d3250398bb3ec22a62fd605f7d25bdba303cd897736f8a00ab4b367ab17e8b823d1d5df8b71670620f63c886e6996b067c0ff977d957230d01
+MISC ChangeLog 13883 SHA256 612285588707e84e8c39a6c06a6ac9adbfb57926e8a91bca3c8af68206937ee4 SHA512 efdb58149290407a563234782037739c82b2b543ebdf13927d91732b04509c0a4ffbc4637d45f8229748705bde980b452e15e321be8025f039c1dc4064ee0f76 WHIRLPOOL bd65e8ff60b145ac9ee22334b482e8ef4c8fd94a0d8353b03327d39517d025815eb818813ee33f40476de3b9a9a849550a4f0db5f7c6841d46dfdc179180df7f
 MISC metadata.xml 224 SHA256 7d1302c10f9b1a8ea6ce22057fa87754cbe057e6066f24086cffa88cdfc6e534 SHA512 75d2946bbfa18966b6d66b9bc23eb6d0664a68e63b02467ae9639faec9deaaec9912b88cc0130e55b31e6ae11b509e70a3f2b9ba5a8da25d6019806ffeeb9b59 WHIRLPOOL bc83aa4ec14d183b70b9064c5c950b3a38644e548d9101d363440189372469e44b62f53e386a6d8744f28312dee0ead2d107c4bc52a872fe757eb2d632afb413
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlO4svIACgkQVWmRsqeSphOTfACfdXwfif6uVIB5fgOEw6CY7E9z
-vLYAniTYuu4FVuJD6QR9OE6whXyZvOz4
-=6NmO
+iJwEAQEIAAYFAlO5AkoACgkQG9wOWsQutda0yQP/eD3yVk803sPjW3AtHd9nqv3B
+Km+4oFXjRUfzHz4ua8h0Or3+coSXPSQAzQSB0xUpyiTPny36NB2yXHAjxCo0c0rC
+hZZMT6TyNnffTrXzC9rncuWV8miVLu5N3FBPl9wrqF889xO+dkATbRUehNTe3omF
+NMgEZyTQP9BHA/P2K1Y=
+=gFNI
 -----END PGP SIGNATURE-----
