@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/perl-cleaner/perl-cleaner-2.15.ebuild,v 1.3 2014/07/06 02:22:40 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/perl-cleaner/perl-cleaner-2.15.ebuild,v 1.4 2014/07/06 07:55:52 zlogene Exp $
 
 EAPI=5
 
@@ -10,7 +10,7 @@ HOMEPAGE="http://www.gentoo.org/proj/en/perl/"
 if [[ "${PV}" == "9999" ]] ; then
 	inherit git-r3
 	EGIT_REPO_URI="http://github.com/gentoo-perl/perl-cleaner.git"
-	KEYWORDS="hppa"
+	KEYWORDS=""
 else
 	SRC_URI="mirror://gentoo/${P}.tar.bz2"
 	KEYWORDS="alpha amd64 arm ~arm64 hppa ia64 ~m68k ~mips ppc ppc64 s390 ~sh sparc x86 ~amd64-fbsd ~sparc-fbsd ~x86-fbsd"
