@@ -4,15 +4,17 @@ Hash: SHA256
 DIST jquery-ui-rails-3.0.1.gem 155136 SHA256 190f4984e28d48f684d320b37ad23138757ba9ce65065488ec29a8df226f5ae0 SHA512 cc9b0e5ebb96edf11503473f0b841bf0803b20c3c6205e2e50747ac4c981cfb049b2ef393bf3605b1fe2d09060fbe9d484771f9e25a711d7c33b9375b759014c WHIRLPOOL 83def4e01b112e3617e550014ea4fd9a5cf8ed1abb3adcf36751e0458df449d9dcb37c1a66f663729604cddfb712aca1593d9134956ec15ff3770c3765ebc0a7
 DIST jquery-ui-rails-4.1.1.gem 155136 SHA256 74ea6577811c5754099d2fc45454d3094c84ece0aa90f38d3fec818ceaf05dda SHA512 acb0c819e80ee65ded61aab433d9b20c2e64d24509a537185c5b4d43ed9d0e334edecb8aad25c12a1072953949116f26c2df66b4ca82a92a4befb6e50a9f8055 WHIRLPOOL 121996bd94523d0066a3e165511ddeef030c22532be17b330023268be4cfa91f8d2c326297ccd35cd9fa242f0239d0e3985822126fc2b2964f32c20063843170
 DIST jquery-ui-rails-4.2.1.gem 155136 SHA256 5b349e7066150b16d7a784183f040c083d51af3357937b8564aa0cc8b1cd59bd SHA512 632ebd8994d8b045e303c591b778cf85de9ea666901761201caefb818af56ed8021152b95b50ecb0e25d10c512b6fb4846b382a21f2a220b9d3550be1c434375 WHIRLPOOL 07d53279532e62cc067102ec14e2ac04d46888a002dd07b0a7dda5065a0b287f9a24575cf086b8a9e59d5337d84be73ed2b0de6d7ede8684b527c0de9c131633
+DIST jquery-ui-rails-5.0.0.gem 160768 SHA256 d75bff7fdc83dd0b83b7700a2dc91c6012e23dbf6d970676d94fc2957e628e31 SHA512 670992823837302667f5db96694f38f7cd51be59634dbb24d96935cdeb547d5e7e1aa6a12a4c0b1f6337a7ea3ecc983c21538288a2c6172bc962d8d7c67f41c7 WHIRLPOOL 04d0dbc32a0b8a9873dc3161e61b43f858e8d7a13eb543bcde432a373228201e9d17499712fb8ac0333156f79f13d0114f7bc9afa6d6d4c1d570f17500916caa
 EBUILD jquery-ui-rails-3.0.1.ebuild 677 SHA256 056957e676b661c4270e2686a8c2ce3c3e02d58ba390b56b34cfa2b0644fdb1a SHA512 c18a900513ceb8801f99174b98b8126e96d62b7d14fec573a059564c7335681acbfa249dbbcbe7a0583b5aebb96997e8bac253a4f0cc08016d426d3f3396ce08 WHIRLPOOL bf1bed8e8954df0c58d4f69caea653202fdad5dc2e3a67ba36f1de11218436908bb6a6d00304261e19e7a86704547192734b8e96bf9020303756c33559876cec
 EBUILD jquery-ui-rails-4.1.1.ebuild 637 SHA256 1e810b9d5640cfefbe0613d67fe153b5ea9eae62e9e915d89c6c1fa2d4c23776 SHA512 4bc7c52306b601101abc7128aff36f38dc0e59ce94e5f97a32dbe16ed014a7cf230ebade7527e498a23092813bd28480d27a38275f788ab96b121bc705418a9a WHIRLPOOL 6549d2beb59343b994b708f0bcd347dd950e388bee260fb8aafdacba9a5eec5fd60dbf00246ded9791894afd783634f7ffca1b1e52502f28722b85ef6d0479f1
 EBUILD jquery-ui-rails-4.2.1.ebuild 667 SHA256 35cbec43712f6a60d130f6bb130a100a393a8da2f856569d54a81f3380f5113c SHA512 dcbd8c436350646397682387ab263075946878b0ac6eb6c0dc3e8936153d21354934da3dd4aacbd56c7ee38dbee5738b7286bab7e8e2e8999d0e4e6774c6f0f8 WHIRLPOOL 6ad13f325f865d0e41f077864d8df8376658cda280b3c77fb1d3d7dcb2e04e884447405925434917d1958b8540bacce7f03ee080c3a0b5023863f5876e1100cc
-MISC ChangeLog 1695 SHA256 6640c7b35961dee7d7ac6c766f6640ead0a968fdbbaa045030386da1c69354a7 SHA512 e274a049c894156a91f712a93a6a876af5c5fe48d4da3d8aa65739f27da6b5a287daa2e0a78a6c028df9a92b5276c612fe3f8a68208a29ce55e6f53a8f8b4614 WHIRLPOOL a4da0ac01c07ec63c5f7b19509ec844f00c3be0cbcf8385f053b6ff8d3bb17504f2ccb0f9a91cfe0faf2bdb73008201604f53079b009f9cf8f826ecefb082391
+EBUILD jquery-ui-rails-5.0.0.ebuild 667 SHA256 ba1ab358836ccba279505f4fbd802cb5bc3e98f5b82935169ba010dc99eb6214 SHA512 b2f40162fec7921d896015f2bb734911a977c1465c2aa9464dbe320997bf793f635536a56204cf3a4bd2589996b8e1a865350096b11d2fcc667fdc524e1667c4 WHIRLPOOL 8f2342022aea81e7df979a69d27e3ef42637bbb1eb0f00138f0c0ef9c3b3f9aeecc776abed7f1c7a62fe7aedb563c3d586d8256427c05cc8fa2af3f7f4a5bb75
+MISC ChangeLog 1834 SHA256 dd38b39eb94ea4e127f8bfe9957d899842e02d3004f22d4613d9a7a577731b63 SHA512 7d9de2b5c5e4c14255457b84ca917de509103d1b11aad0a70c771360b05cc18e26efb35eb9d81ca20cb29b1dc332991a36235fc57c49ad088ff2f58c843c6c83 WHIRLPOOL 83d983a40c9c8c79017d751774681f5eb1dd465aee0370363847ed5fb2f2f4cd0d8440e8147e286b51a03042055b65cdb2f6567a482636c677f9b797e0bdcf69
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iF4EAREIAAYFAlOycewACgkQiIP6VqMIqNexVwD9H626SzLX+zgKMHKj6GZDG4y7
-Y9IFBCsxFWJ80LNO0SoA/3ogXJYSqgy0b3nZRmh0t+nZj8VHo0T+ADeGVDlfmBcr
-=1rB7
+iF4EAREIAAYFAlO5ADoACgkQiIP6VqMIqNdqQgD/fxGgIdNwZSvVvu2G2SDWugM8
+WROFpRGh+RZlfTCR5lsA/2T7VOmxFwIuSX7u9W2urXeRL6kfOTO42MixYCt2nUpp
+=WFug
 -----END PGP SIGNATURE-----
