@@ -1,0 +1,26 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/jquery-ui-rails/jquery-ui-rails-5.0.0.ebuild,v 1.1 2014/07/06 07:52:19 graaff Exp $
+
+EAPI=5
+USE_RUBY="ruby19 ruby20 ruby21"
+
+RUBY_FAKEGEM_TASK_DOC=""
+RUBY_FAKEGEM_TASK_TEST=""
+
+RUBY_FAKEGEM_EXTRADOC="History.md README.md VERSIONS.md"
+
+RUBY_FAKEGEM_EXTRAINSTALL="app"
+
+inherit ruby-fakegem
+
+DESCRIPTION="The jQuery UI assets for the Rails 3.2+ asset pipeline"
+HOMEPAGE="http://www.rubyonrails.org"
+
+LICENSE="MIT"
+SLOT="5"
+KEYWORDS="~amd64 ~arm ~x86 ~x64-macos"
+
+IUSE=""
+
+ruby_add_rdepend ">=dev-ruby/railties-3.2.16"
