@@ -5,18 +5,16 @@ AUX confd-1.0.0_pre6 856 SHA256 fd30a70c06553463414e93771306a59fdabbcf674218dac4
 AUX vdr-xineliboutput-1.0.4_p20090810-compile-fix.diff 3657 SHA256 e4062ec7b43136b2113173641a6b5b7a2d50cd892a0aec8cf778c97874f84743 SHA512 f7d36a2bae6f5a6fb956c03e3a542aed86e374ffcfe642ce607cd19c891b163d06dcce9b57457882fd6b413e547d3e6599608f9c103a15c8c871445a18cb1746 WHIRLPOOL 4b690a2a945cebc2b6e71b54f36590b2ade547e04bf32d1cfdbfb491a4175389b98dc591a4c1d61046799acdbed111dcc305f49c1ad969473c9bbd8db03a3e70
 AUX vdr-xineliboutput-1.0.5-ldflags.patch 1382 SHA256 e455aaf86c771e71848f01bd281ac4cbdc4c710a91b1896069bbf41da5c876ad SHA512 4623becc15b6ed628c467963c11957a239211a11635bf5c2a9048345bd78e248f0092fd0fd08c8d33aaf92956e7cfa30baafcb52629eec22a36b12962d642648 WHIRLPOOL 3dc1f909d2b1e03c74f00a18c8cb2324d29a90ba31b826cf6564d4e1b230475b4ae73615b3cf3e4822e1f3ec078aaf2accd66b0d9a5f7d6f1ac279bc4fbd3de4
 AUX vdr-xineliboutput-9999-build-system.patch 744 SHA256 43e52f8d29cb9aed4e487eb63f14101dfdbb30ba42f74ee57eb7bbf512f89bbd SHA512 0f67e0388bed7c38f04b5b13a7582396643771fb1a193368e6eebfc2acb11dd72c55d535c2ab9a07950a740eb85a16796c0787137c5f788914758648ccb26471 WHIRLPOOL bf9121e01429f16b302c0f251b5bf3bb2a001179cc40da6ae4533a1e3681a0b15c835c39b10c2a2f847d99af8e83fb706c4c6e694cd74427bf87f3a3488b2121
-DIST vdr-xineliboutput-1.0.5.tgz 366309 SHA256 305f98f00f40d319bb5beb44f832a445e9d36a33a5c4966874f368f4bbffaf91
 DIST vdr-xineliboutput-1.1.0.tgz 404820 SHA256 bddebfbf77e956a50faea1baa44513a31122961357bc502b588c521358da77d3 SHA512 255ae698c1dc9d9098847e62c386a6bd24ec1dc822fb695600ef944e18d0febfac0d5b487de57a17ea9f9bd3935d1d11763a06a5daa527ce95f9557a408c264d WHIRLPOOL be47aeb039bb69e85a0f964940b3173f4371ae911d58df76c6e0135b9843471cd21b27efdfc95001216a508c0bbdc1e4957cb0d50da1a3c49e7c4ba7dd24e55c
-EBUILD vdr-xineliboutput-1.0.5-r2.ebuild 3580 SHA256 e072e330fad8149263ee5b215a8cbb9b9c666292277b09cfae6eb03065d25682 SHA512 2f6d67b1a849ea1e3138d893794f1b79753fb743785b2d102eb577b204a3c3bdc37e3ac24ab04a34bbb94ba431d3c6b02641943e9771bb01c688cedae4c7e5b9 WHIRLPOOL 8da5fd8e495acafa488d9bb992425e5626007dadd0399112ff1fb8ea0dd8539a6dc432b68488a5df29a55f2ef2a8f39c015d321b95d4a88f39de93cc018de5dd
 EBUILD vdr-xineliboutput-1.1.0.ebuild 3091 SHA256 892f6a6ae66756a9cd67650c7f683cc2aa5959ae95d6b70f4a6a917ec51a6c53 SHA512 dea2b86c4470882ef8be9b463699df2e0b18c3e22ad23f0e97abc6e1df35819bd4335b78f009160538d5a9ac1a0fae4337714afd1af8d67ae2f5e98128db0df8 WHIRLPOOL c817d091001bee56c00c8236b5bde95f96747ad68088b8de93b1d1e7cef9ec86598217f2cabae8110ed651639799d88a63ebe89e6a6009ae300647bde3067760
 EBUILD vdr-xineliboutput-9999.ebuild 3419 SHA256 e9cbb908d41b5b66798f96ed8e19819942a81f20d94aeec696e3e5128a1af971 SHA512 2e1b6b51fab54b88058e24279fa3eab0686f7b84e5a715606aa3dba84bce42a9b3a09f0c583417b3f536627d4e3881418662dbdcf6987a23ccc24b3001fcad49 WHIRLPOOL 5a7266362a58b5352e0ff3d37cc4e464ce5ee165e5055c2aa29063a8437386284c919adb3d47bd9e8fb7ef55f026a40161fe51d9a70568b25e41c129f706a45a
-MISC ChangeLog 15298 SHA256 6653975fc237090ed115124697fb8959c8c2069b41c359623de67a663c1b474d SHA512 f43c60b71f841d53e231cb56d41ac9d7187acabb1d1e0fe880cf64fb4cf6f394e9c20a68e9d2f9e7302e835c8a78861faec4508d259c52c603a86a710d0023eb WHIRLPOOL a349d530ba28b83af664add75d36ced390d7ed7f271ff919134811208b3fc13c760f629204d5fc095251a2030e6a8f99c65b2ba3470cf19d5ced36afa962d787
+MISC ChangeLog 15406 SHA256 7e64fcdf3f4ad934cb217c6135a032fa4ad04c9c8f6b4715d01a2ac3bcc1c4e4 SHA512 1c9b710a7367b4c844204260d1dce311d684a10a5ef5b82da6d256422e1b9d4e04d51db330601d0c6f267b426e8db5a82616481731546d15668deaa8b825b66a WHIRLPOOL 286ecdc314ce4f02298a2904d9a0debf01e62f60aebe142480f0565e53a8cf01a280dd79797518f6c1300b7401108ecafdbe1a7ebfacbcb4bd6fb726a266f3f0
 MISC metadata.xml 841 SHA256 3dc039001ddd3c3a6630f615fb2e94261f369931cd73cd5405644937145bb189 SHA512 9afc4d17ddd1e4d0bfcfb86ed2e1b4587c333e40950e2b8a3b7b92b09944a34bab4621f097d7bcc72878abdcc3cbef3b5733ab1f913e0bff044987838477fe94 WHIRLPOOL 73885acc6772ad53abaacb9416f64f9a7b6f29078cce1adf052097770a051631cb59f1e549031c9f2a1214f86e0ba0cbdae2b33cc2304481fec3e4bd16da5af0
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 Comment: added by hd_brummy@gentoo.org
 
-iD8DBQFTCgE6dn07HTTCgIoRCGLCAJ9ZVT9XBgAj52WOocjrpw3OGafLKgCfcviE
-hRNrIbbqkg8fDAXR2Izgbsg=
-=P/8e
+iD8DBQFTuIMadn07HTTCgIoRCKHAAJ9NlVwAOvRrbwQTC1HeKXbiiPgf0ACgorcy
+8QtM7RY8iKlt4uDt9FLPpFU=
+=DjzK
 -----END PGP SIGNATURE-----
