@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/jquery-ui-rails
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/jquery-ui-rails/ChangeLog,v 1.9 2014/07/01 08:31:30 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/jquery-ui-rails/ChangeLog,v 1.10 2014/07/06 07:52:19 graaff Exp $
+
+*jquery-ui-rails-5.0.0 (06 Jul 2014)
+
+  06 Jul 2014; Hans de Graaff <graaff@gentoo.org>
+  +jquery-ui-rails-5.0.0.ebuild:
+  Version bump.
 
   01 Jul 2014; Hans de Graaff <graaff@gentoo.org> jquery-ui-rails-3.0.1.ebuild,
   jquery-ui-rails-4.2.1.ebuild:
