@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/perl-cleaner
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/perl-cleaner/ChangeLog,v 1.99 2014/07/06 02:22:40 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/perl-cleaner/ChangeLog,v 1.100 2014/07/06 07:55:52 zlogene Exp $
+
+  06 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> perl-cleaner-2.15.ebuild:
+  Drop hppa from live KEYWORDS
 
   06 Jul 2014; Jeroen Roovers <jer@gentoo.org> perl-cleaner-2.15.ebuild:
   Stable for HPPA (bug #516462).
